paper update test for multistage

--- a/010#BasicModel.ipynb
+++ b/010#BasicModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,18 @@
        " 'sqli_test_1',\n",
        " 'test.csv',\n",
        " 'train.csv',\n",
+       " 'test_neg_spe.csv',\n",
        " 'sqli_test_2',\n",
+       " 'test_pos.csv',\n",
        " 'sqli_train',\n",
+       " 'test_neg_pos.csv',\n",
        " 'dlstm_diff.csv',\n",
        " 'decode_train_neg_pos.csv',\n",
        " 'decode_train_pos.csv',\n",
        " '004#dlstm_diff.csv',\n",
        " 'test2.csv',\n",
        " 'sqli_test_2.zip',\n",
+       " 'test_neg.csv',\n",
        " 'sqli_test_1-.zip',\n",
        " '007#bi-GRU-MaxPool.csv']"
       ]
@@ -158,6 +162,7 @@
     "def get_train_neg_spe():\n",
     "    train_pd = pd.read_csv(\"./data/decode_train_neg_spe.csv\")\n",
     "    train_pd = train_pd.sample(n=814, random_state=2018)\n",
+    "#     train_pd = train_pd.sample(n=1814, random_state=2018)\n",
     "    max_seq = 300\n",
     "\n",
     "    print(\"get word_list & label encoder\")\n",
@@ -229,8 +234,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2500/2500 [00:00<00:00, 152882.62it/s]\n",
-      "100%|██████████| 2500/2500 [00:00<00:00, 339740.80it/s]"
+      "100%|██████████| 2500/2500 [00:00<00:00, 148372.20it/s]\n",
+      "100%|██████████| 2500/2500 [00:00<00:00, 333601.43it/s]"
      ]
     },
     {
@@ -246,7 +251,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 872/872 [00:00<00:00, 218916.21it/s]"
+      "100%|██████████| 872/872 [00:00<00:00, 120580.02it/s]"
      ]
     },
     {
@@ -263,7 +268,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 872/872 [00:00<00:00, 401342.38it/s]\n"
+      "100%|██████████| 872/872 [00:00<00:00, 414910.16it/s]\n"
      ]
     },
     {
@@ -278,8 +283,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 814/814 [00:00<00:00, 346897.32it/s]\n",
-      "100%|██████████| 814/814 [00:00<00:00, 390904.91it/s]"
+      "100%|██████████| 814/814 [00:00<00:00, 325965.58it/s]\n",
+      "100%|██████████| 814/814 [00:00<00:00, 435646.73it/s]"
      ]
     },
     {
@@ -297,8 +302,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 814/814 [00:00<00:00, 993644.78it/s]\n",
-      "100%|██████████| 814/814 [00:00<00:00, 516984.17it/s]"
+      "100%|██████████| 814/814 [00:00<00:00, 988752.81it/s]\n",
+      "100%|██████████| 814/814 [00:00<00:00, 495236.94it/s]"
      ]
     },
     {
@@ -397,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lstm_cell <tensorflow.python.ops.rnn_cell_impl.BasicLSTMCell object at 0x7f39db5b2c50>\n",
+      "lstm_cell <tensorflow.python.ops.rnn_cell_impl.BasicLSTMCell object at 0x7ff8982c4be0>\n",
       "outputs Tensor(\"LSTM/rnn/transpose:0\", shape=(?, 300, 32), dtype=float32)\n",
       "xw_plus_b: Tensor(\"softmax/xw_plus_b:0\", shape=(?, 2), dtype=float32)\n",
       "logits: Tensor(\"softmax/Reshape_1:0\", shape=(?, 300, 2), dtype=float32)\n",
@@ -530,30 +535,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0.02, Minibatch Loss= 0.676643, Training Accuracy= 0.60000\n",
-      "\tTesting Accuracy: 0.51\n",
-      "Step 1.0, Minibatch Loss= 0.518614, Training Accuracy= 0.73000\n",
-      "\tTesting Accuracy: 0.742\n",
-      "Step 2.0, Minibatch Loss= 0.092236, Training Accuracy= 0.96000\n",
-      "\tTesting Accuracy: 0.933\n",
-      "Step 3.0, Minibatch Loss= 0.218158, Training Accuracy= 0.93000\n",
-      "\tTesting Accuracy: 0.906\n",
-      "Step 4.0, Minibatch Loss= 0.015932, Training Accuracy= 1.00000\n",
-      "\tTesting Accuracy: 0.987\n",
-      "Step 5.0, Minibatch Loss= 0.010994, Training Accuracy= 1.00000\n",
-      "\tTesting Accuracy: 0.985\n",
-      "Step 6.0, Minibatch Loss= 0.013828, Training Accuracy= 1.00000\n",
-      "\tTesting Accuracy: 0.986\n",
-      "Step 7.0, Minibatch Loss= 0.019837, Training Accuracy= 0.99000\n",
-      "\tTesting Accuracy: 0.985\n",
-      "Step 8.0, Minibatch Loss= 0.016731, Training Accuracy= 0.99000\n",
+      "Step 0.02, Minibatch Loss= 0.677503, Training Accuracy= 0.62000\n",
+      "\tTesting Accuracy: 0.518\n",
+      "Step 1.0, Minibatch Loss= 0.443666, Training Accuracy= 0.90000\n",
+      "\tTesting Accuracy: 0.908\n",
+      "Step 2.0, Minibatch Loss= 0.055210, Training Accuracy= 0.99000\n",
+      "\tTesting Accuracy: 0.977\n",
+      "Step 3.0, Minibatch Loss= 0.033101, Training Accuracy= 1.00000\n",
       "\tTesting Accuracy: 0.989\n",
-      "Step 9.0, Minibatch Loss= 0.032749, Training Accuracy= 0.98000\n",
-      "\tTesting Accuracy: 0.987\n",
-      "Step 10.0, Minibatch Loss= 0.001648, Training Accuracy= 1.00000\n",
-      "\tTesting Accuracy: 0.994\n",
+      "Step 4.0, Minibatch Loss= 0.023677, Training Accuracy= 0.99000\n",
+      "\tTesting Accuracy: 0.99\n",
+      "Step 5.0, Minibatch Loss= 0.063019, Training Accuracy= 0.98000\n",
+      "\tTesting Accuracy: 0.973\n",
+      "Step 6.0, Minibatch Loss= 0.003728, Training Accuracy= 1.00000\n",
+      "\tTesting Accuracy: 0.989\n",
+      "Step 7.0, Minibatch Loss= 0.007203, Training Accuracy= 1.00000\n",
+      "\tTesting Accuracy: 0.993\n",
+      "Step 8.0, Minibatch Loss= 0.001622, Training Accuracy= 1.00000\n",
+      "\tTesting Accuracy: 0.993\n",
+      "Step 9.0, Minibatch Loss= 0.001386, Training Accuracy= 1.00000\n",
+      "\tTesting Accuracy: 0.993\n",
+      "Step 10.0, Minibatch Loss= 0.000717, Training Accuracy= 1.00000\n",
+      "\tTesting Accuracy: 0.996\n",
       "Optimization Finished!\n",
-      "Testing Accuracy: 0.994\n"
+      "Testing Accuracy: 0.996\n"
      ]
     }
    ],
@@ -615,20 +620,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ./logs/010_BasicModel/sqli.ckpt-500\n",
-      "Testing Accuracy: 0.994\n"
+      "INFO:tensorflow:Restoring parameters from ./logs/010_BasicModel-2/sqli.ckpt-500\n",
+      "Testing Accuracy: 0.99\n"
      ]
     }
    ],
    "source": [
-    "LOG_DIR = \"./logs/010_BasicModel/\"\n",
+    "LOG_DIR = \"./logs/010_BasicModel-2/\"\n",
     "saver = tf.train.Saver(tf.global_variables(), max_to_keep=15)\n",
     "module_file = tf.train.latest_checkpoint(LOG_DIR)\n",
     "\n",
@@ -657,14 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diff len: 6\n"
+      "diff len: 10\n"
      ]
     },
     {
@@ -698,51 +703,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>k 19 stays afloat as decent null drama/action ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.708374</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>-</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.934489</td>\n",
+       "      <td>0.977537</td>\n",
        "      <td>1</td>\n",
        "      <td>110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1 union select 1,concat_ws(0x3a,table_name),3...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.153737</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1478505113711_51</td>\n",
        "      <td>0</td>\n",
-       "      <td>159</td>\n",
+       "      <td>0.630285</td>\n",
+       "      <td>1</td>\n",
+       "      <td>194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>a' &amp;&amp; 'b</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.096985</td>\n",
+       "      <td>0.069934</td>\n",
        "      <td>0</td>\n",
        "      <td>252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>;li8bd|2zq($`i(fpb15j8x6a?r}^~+s7mf#uux^o,!.xy...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.977820</td>\n",
-       "      <td>1</td>\n",
-       "      <td>265</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>918 union select 0,1,2,3,4,5,6,7,8,9,10,11,12 ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.161630</td>\n",
+       "      <td>{\"moduleconfigkey\":\"9129_2714810_1318063_cell-...</td>\n",
        "      <td>0</td>\n",
-       "      <td>689</td>\n",
+       "      <td>0.501896</td>\n",
+       "      <td>1</td>\n",
+       "      <td>377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>;&lt;em'rcnlf\";=sryaj7*v~_~i.}g},|c&gt;rdw,i]13x6z%i...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.583412</td>\n",
+       "      <td>-4728' where 3987=3987 union all select 3987, ...</td>\n",
        "      <td>1</td>\n",
-       "      <td>770</td>\n",
+       "      <td>0.050720</td>\n",
+       "      <td>0</td>\n",
+       "      <td>601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2016-11-14 09:41:50 ( (18831052233</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.932911</td>\n",
+       "      <td>1</td>\n",
+       "      <td>673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18,213466,109605;18,213467,109605;18,213469,10...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.982410</td>\n",
+       "      <td>1</td>\n",
+       "      <td>883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1 into outfile 'asd'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.205151</td>\n",
+       "      <td>0</td>\n",
+       "      <td>884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>{\"command\":\"action\",\"action\":\"getstate\",\"actio...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.631872</td>\n",
+       "      <td>1</td>\n",
+       "      <td>958</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -750,23 +787,31 @@
       ],
       "text/plain": [
        "                                               value  label      pred  plabel  \\\n",
-       "0                                                  -      0  0.934489       1   \n",
-       "1  -1 union select 1,concat_ws(0x3a,table_name),3...      1  0.153737       0   \n",
-       "2                                           a' && 'b      1  0.096985       0   \n",
-       "3  ;li8bd|2zq($`i(fpb15j8x6a?r}^~+s7mf#uux^o,!.xy...      0  0.977820       1   \n",
-       "4  918 union select 0,1,2,3,4,5,6,7,8,9,10,11,12 ...      1  0.161630       0   \n",
-       "5  ;<em'rcnlf\";=sryaj7*v~_~i.}g},|c>rdw,i]13x6z%i...      0  0.583412       1   \n",
+       "0  k 19 stays afloat as decent null drama/action ...      0  0.708374       1   \n",
+       "1                                                  -      0  0.977537       1   \n",
+       "2                                   1478505113711_51      0  0.630285       1   \n",
+       "3                                           a' && 'b      1  0.069934       0   \n",
+       "4  {\"moduleconfigkey\":\"9129_2714810_1318063_cell-...      0  0.501896       1   \n",
+       "5  -4728' where 3987=3987 union all select 3987, ...      1  0.050720       0   \n",
+       "6                 2016-11-14 09:41:50 ( (18831052233      0  0.932911       1   \n",
+       "7  18,213466,109605;18,213467,109605;18,213469,10...      0  0.982410       1   \n",
+       "8                               1 into outfile 'asd'      1  0.205151       0   \n",
+       "9  {\"command\":\"action\",\"action\":\"getstate\",\"actio...      0  0.631872       1   \n",
        "\n",
        "    id  \n",
-       "0  110  \n",
-       "1  159  \n",
-       "2  252  \n",
-       "3  265  \n",
-       "4  689  \n",
-       "5  770  "
+       "0    7  \n",
+       "1  110  \n",
+       "2  194  \n",
+       "3  252  \n",
+       "4  377  \n",
+       "5  601  \n",
+       "6  673  \n",
+       "7  883  \n",
+       "8  884  \n",
+       "9  958  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,6 +848,7 @@
     "diff_pd['pred'] = pred_y\n",
     "diff_pd['plabel'] = pred_class\n",
     "diff_pd['id'] = test_diff_index\n",
+    "diff_pd.to_csv(\"./result/vaild_2.csv\", index=False)\n",
     "diff_pd"
    ]
   },
